target/pkg_audit/vitte_pkg/Payload/usr/local/share/vitte/src/vitte/compiler/tests/diagnostics/lexer/unterminated_string.txt.snap
error[LEX_E_UNTERMINATED_STRING]: unterminated string literal
  --> src/vitte/compiler/tests/diagnostics/lexer/unterminated_string.vit:1:9
   |
 1 | let s = "unterminated
   |         ^^^^^^^^^^^^^ unterminated string literal
   |
help: terminate the string with a matching quote
